# NUKAN

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  _inspect.txt  pyproject.toml  requirements-dev.txt  requirements.txt
app/: lifespan.py  main.py
app/api/: deps.py
app/api/routes/: search.py  series.py
app/core/: config.py  constants.py  exceptions.py
app/domain/entities/: search_result.py  series.py
app/domain/interfaces/: cache.py  fetcher.py  parser.py  scraper.py
app/domain/value_objects/: pagination.py
app/infrastructure/cache/: memory_cache.py  redis_cache.py
app/infrastructure/fetchers/: browser_fetcher.py  http_fetcher.py
app/infrastructure/parsers/: search_parser.py  series_parser.py
app/infrastructure/proxy/: proxy_rotator.py
app/schemas/: common.py  search.py  series.py
app/services/: cache_service.py  search_service.py  series_service.py
