[project]
name = "nukan"
version = "0.1.0"
description = "Read-only unofficial API for NovelUpdates metadata"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
